...
        children: [
          Padding(
            padding: const EdgeInsets.only(bottom: 150),
            child: _sessioList.isEmpty
                ? Center(
                    child: Text(
                      "No hi ha cap sessió disponible",
                      style: Theme.of(context).textTheme.titleMedium,
                    ),
                  )
                : ListView.builder(
                    padding: const EdgeInsets.all(16),
                    itemCount: _sessioList.length,
...
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    SizedBox(
                      width: double.infinity,
                      child: ElevatedButton(
                        onPressed: _crearSessio,
                        child: const Text('Crear una nova sessió'),
                      ),
                    ),
                  ],
                ),
              ),
            ),
...
