...
                child: Padding(
                  padding: const EdgeInsets.all(15),
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Text(
                        'DATA: ${sessio.dataString}',
                        style: Theme.of(context).textTheme.titleMedium,
                      ),
                      Text(
                        'Fitxer xml: ${sessio.nomFitxerXml ?? 'BUIT'}',
                        style: Theme.of(context).textTheme.titleMedium,
                      ),
...
